# FastAPI-MongoDB-Auth

./: README.md
app/: main.py
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: admin.py  auth.py  config.py  crud.py  database.py  exceptions.py  main.py  models.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.jsx  page.jsx
